examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E422: callback effect row is missing required effects.

fn run_needs_console_clock(f: (() -> Int with Console, Clock)) -> Int with Console, Clock {
    f()
}

fn only_console() -> Int with Console {
    print("console")
    1
}

fn main() with Console, Clock {
    run_needs_console_clock(only_console)
    None
}
